--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -27,6 +27,13 @@ jobs:
         with:
           fetch-depth: '0'
       
+      - name: Create and push tag
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a ${{ inputs.version }} -m "Release ${{ inputs.version }}"
+          git push origin ${{ inputs.version }}
+      
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef
         with:
