Add read permission for actions in version job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
     uses: ./.github/workflows/ci_version.yml
     name: Version
     permissions:
+      actions: read
       contents: write
 
   packageapp:
