--- a/.github/workflows/ci_changes.yml
+++ b/.github/workflows/ci_changes.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const workflow_id = context.workflow;
+            const workflow_id = 'ci.yml';
             const branch = 'main';
             
             let page = 1;
