--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,16 @@ on:
 
 jobs:
 
+  version:
+    if: always() && !cancelled() && !contains(needs.*.result, 'failure')
+    uses: ./.github/workflows/ci_version.yml
+    name: Version
+    permissions:
+      actions: read
+      contents: write
+
   changes:
+    needs: version
     uses: ./.github/workflows/ci_changes.yml
     name: Detect Changes
 
@@ -43,16 +52,6 @@ jobs:
     name: Verify End to End Tests
     with:
       e2e: ${{ needs.changes.outputs.e2e }}
-
-  version:
-    needs: [frontend, backend, e2e]
-    # Run version even if some prior jobs were skipped, but not if they failed
-    if: always() && !cancelled() && !contains(needs.*.result, 'failure')
-    uses: ./.github/workflows/ci_version.yml
-    name: Version
-    permissions:
-      actions: read
-      contents: write
 
   packageapp:
     needs: version
