--- a/.github/workflows/ci_verifypostgres.yml
+++ b/.github/workflows/ci_verifypostgres.yml
@@ -52,7 +52,7 @@ jobs:
           echo "PostgreSQL is ready!"
 
       - name: Install Chromium
-        run: pnpm dlx playwright install chromium --with-deps
+        run: pnpm exec playwright install chromium --with-deps
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
 
