--- a/.github/workflows/ci_verifysqlite.yml
+++ b/.github/workflows/ci_verifysqlite.yml
@@ -43,7 +43,7 @@ jobs:
         working-directory: ./Lighthouse.EndToEndTests
   
       - name: Install Chromium
-        run: pnpm dlx playwright install chromium --with-deps
+        run: pnpm exec playwright install chromium --with-deps
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
 
