--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -7,7 +7,7 @@
 		"dev": "cross-env VITE_API_BASE_URL=http://localhost:5169/api vite",
 		"dev-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE pnpm run dev",
 		"build": "tsc -b && vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
-		"build-docker": "tsc -b && vite build --outDir ./dist",
+		"build-docker": "vite build --outDir ./dist",
 		"build-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
 		"prebuild": "pnpm dlx @biomejs/biome check --write ./src",
 		"preview": "vite preview",
