--- a/Lighthouse.Frontend/package.json
+++ b/Lighthouse.Frontend/package.json
@@ -5,10 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "cross-env VITE_API_BASE_URL=http://localhost:5169/api vite",
-		"dev-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE pnpm run dev",
 		"build": "tsc -b && vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
-		"build-docker": "vite build --outDir ./dist",
-		"build-demo": "cross-env VITE_API_SERVICE_TYPE=DEMO VITE_API_SERVICE_DELAY=TRUE vite build --outDir ../Lighthouse.Backend/Lighthouse.Backend/wwwroot",
+		"build-docker": "tsc -b && vite build --outDir ./dist",
 		"prebuild": "pnpm dlx @biomejs/biome check --write ./src",
 		"preview": "vite preview",
 		"test": "vitest run --reporter=default",
