--- a/.github/workflows/ci_verifysqlite.yml
+++ b/.github/workflows/ci_verifysqlite.yml
@@ -37,12 +37,39 @@ jobs:
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
 
+      - name: Get pnpm store directory
+        shell: bash
+        run: echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+        working-directory: ./Lighthouse.EndToEndTests
+
+      - name: Cache pnpm dependencies
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-e2e-${{ hashFiles('**/Lighthouse.EndToEndTests/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-e2e-
+
       - name: Install E2E dependencies
         run: pnpm install --frozen-lockfile
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
-  
+
+      - name: Get Playwright version
+        id: playwright-version
+        shell: bash
+        run: echo "PLAYWRIGHT_VERSION=$(pnpm list @playwright/test --json | grep -oP '"version":\s*"\K[^"]+' | head -1)" >> $GITHUB_ENV
+        working-directory: ./Lighthouse.EndToEndTests
+
+      - name: Cache Playwright browsers
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830
+        id: playwright-cache
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ env.PLAYWRIGHT_VERSION }}
+
       - name: Install Chromium
+        if: steps.playwright-cache.outputs.cache-hit != 'true'
         run: pnpm exec playwright install chromium --with-deps
         shell: bash
         working-directory: ./Lighthouse.EndToEndTests
